--- a/app/pages/dashboard/dashboard.html
+++ b/app/pages/dashboard/dashboard.html
@@ -3,50 +3,50 @@
 <div class="row">
   <div class="col-lg-6 col-md-12 col-sm-12"
        ba-panel
-       ba-panel-title="Acquisition Channels"
+       ba-panel-title="Tracked Bugs - Specific Occurences Percentage"
        ba-panel-class="medium-panel traffic-panel">
     <traffic-chart></traffic-chart>
   </div>
   <div class="col-lg-6 col-md-12 col-sm-12"
        ba-panel
-       ba-panel-title="Users by Country"
+       ba-panel-title="Analyzed Stations by Country"
        ba-panel-class="medium-panel">
     <dashboard-map></dashboard-map>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-xlg-9 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <div class="row">
-      <div class="col-xlg-8 col-lg-12 col-md-12 col-sm-7 col-xs-12"
-           ba-panel
-           ba-panel-title="Revenue"
-           ba-panel-class="medium-panel">
-        <dashboard-line-chart></dashboard-line-chart>
-      </div>
-      <div class="col-xlg-4 col-lg-12 col-md-12 col-sm-5 col-xs-12"
-           ba-panel
-           ba-panel-class="popular-app medium-panel">
-        <popular-app></popular-app>
-      </div>
+    <div class="col-lg-6 col-md-12 col-sm-12"
+         ba-panel
+         ba-panel-title="Card Insertion - Event Occurences"
+         ba-panel-class="medium-panel">
+      <dashboard-line-chart></dashboard-line-chart>
     </div>
-  </div>
-  <div class="col-xlg-3 col-lg-6 col-md-6 col-sm-12 col-xs-12"
-       ba-panel
-       ba-panel-title="Feed"
-       ba-panel-class="large-panel with-scroll feed-panel">
-    <blur-feed></blur-feed>
-  </div>
+    <div class="col-lg-6 col-md-12 col-sm-12"
+         ba-panel
+         ba-panel-title="Cash Transactions - Event Occurences"
+         ba-panel-class="medium-panel">      
+      <dashboard-line-chart-third></dashboard-line-chart-third>
+    </div>
 </div>
 
-<div class="row shift-up">
-  <div class="col-xlg-3 col-lg-6 col-md-6 col-xs-12"
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12"
+         ba-panel
+         ba-panel-title="Fueling - Event Occurences"
+         ba-panel-class="medium-panel">
+      <dashboard-line-chart-second></dashboard-line-chart-second>
+    </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-3 col-md-12 col-sm-12"
        ba-panel
        ba-panel-title="To Do List"
        ba-panel-class="xmedium-panel feed-comply-panel with-scroll todo-panel">
     <dashboard-todo></dashboard-todo>
   </div>
-  <div class="col-xlg-6 col-lg-6 col-md-6 col-xs-12"
+  <div class="col-lg-9 col-md-12 col-sm-12"
        ba-panel
        ba-panel-title="Calendar"
        ba-panel-class="xmedium-panel feed-comply-panel with-scroll calendar-panel">
