--- a/index.html
+++ b/index.html
@@ -57,19 +57,9 @@
   </div>
 
   <footer class="al-footer clearfix">
-    <div class="al-footer-right">Created for Innovathon Day by <i class="ion-heart"></i></div>
+    <div class="al-footer-right">GVR Florence - GOSSPioneers Team<i class="ion-heart"></i></div>
     <div class="al-footer-main clearfix">
-      <div class="al-copy">GVR Florence - GOSSPioneers Team</div>
-      <ul class="al-share clearfix">
-        <li><i class="socicon socicon-facebook"></i></li>
-        <li><i class="socicon socicon-twitter"></i></li>
-        <li><i class="socicon socicon-google"></i></li>
-        <li><i class="socicon socicon-github"></i></li>
-      </ul>
-    </div>
-    <div class="al-footer-right">Based on AngularJS Theme <i class="ion-heart"></i></div>
-    <div class="al-footer-main clearfix">
-      <div class="al-copy">Blur Admin 2016</div>
+      <div class="al-copy">Created for Innovathon Day by </div>
       <ul class="al-share clearfix">
         <li><i class="socicon socicon-facebook"></i></li>
         <li><i class="socicon socicon-twitter"></i></li>
@@ -214,7 +204,12 @@
 <script src="app/pages/dashboard/dashboardCalendar/DashboardCalendarCtrl.js"></script>
 <script src="app/pages/dashboard/dashboardCalendar/dashboardCalendar.directive.js"></script>
 <script src="app/pages/dashboard/dashboardLineChart/DashboardLineChartCtrl.js"></script>
+<script src="app/pages/dashboard/dashboardLineChart/dashboardLineChart.service.js"></script>
 <script src="app/pages/dashboard/dashboardLineChart/dashboardLineChart.directive.js"></script>
+<script src="app/pages/dashboard/dashboardLineChart/DashboardLineChartCtrlSecond.js"></script>
+<script src="app/pages/dashboard/dashboardLineChart/dashboardLineChartSecond.directive.js"></script>
+<script src="app/pages/dashboard/dashboardLineChart/DashboardLineChartCtrlThird.js"></script>
+<script src="app/pages/dashboard/dashboardLineChart/dashboardLineChartThird.directive.js"></script>
 <script src="app/pages/dashboard/dashboardMap/DashboardMapCtrl.js"></script>
 <script src="app/pages/dashboard/dashboardMap/dashboardMap.directive.js"></script>
 <script src="app/pages/dashboard/dashboardPieChart/DashboardPieChartCtrl.js"></script>
@@ -225,6 +220,7 @@
 <script src="app/pages/dashboard/popularApp/popularApp.directive.js"></script>
 <script src="app/pages/dashboard/trafficChart/TrafficChartCtrl.js"></script>
 <script src="app/pages/dashboard/trafficChart/trafficChart.directive.js"></script>
+<script src="app/pages/dashboard/trafficChart/trafficChart.service.js"></script>
 <script src="app/pages/dashboard/weather/WeatherCtrl.js"></script>
 <script src="app/pages/dashboard/weather/weather.directive.js"></script>
 <script src="app/pages/form/wizard/wizrdCtrl.js"></script>
