--- a/app/pages/dashboard/dashboard.html
+++ b/app/pages/dashboard/dashboard.html
@@ -40,15 +40,15 @@
 </div>
 
 <div class="row">
-  <div class="col-lg-3 col-md-12 col-sm-12"
+  <div class="col-lg-4 col-md-12 col-sm-12"
        ba-panel
-       ba-panel-title="To Do List"
+       ba-panel-title="User Notes"
        ba-panel-class="xmedium-panel feed-comply-panel with-scroll todo-panel">
     <dashboard-todo></dashboard-todo>
   </div>
-  <div class="col-lg-9 col-md-12 col-sm-12"
+  <div class="col-lg-8 col-md-12 col-sm-12"
        ba-panel
-       ba-panel-title="Calendar"
+       ba-panel-title="Calendar [Sample]"
        ba-panel-class="xmedium-panel feed-comply-panel with-scroll calendar-panel">
     <dashboard-calendar></dashboard-calendar>
   </div>
