--- a/app/pages/dashboard/dashboardTodo/dashboardTodo.html
+++ b/app/pages/dashboard/dashboardTodo/dashboardTodo.html
@@ -1,5 +1,5 @@
 <div class="task-todo-container" ng-class="{'transparent': transparent}">
-  <input type="text" value="" class="form-control task-todo" placeholder="Task to do.." ng-keyup="addToDoItem($event)" ng-model="newTodoText"/>
+  <input type="text" value="" class="form-control task-todo" placeholder="Add a notification..." ng-keyup="addToDoItem($event)" ng-model="newTodoText"/>
   <i ng-click="addToDoItem('',true)" class="add-item-icon ion-plus-round"></i>
   <div class="box-shadow-border"></div>
   <ul class="todo-list" ui-sortable ng-model="todoList">
